@@ -48,6 +48,17 @@ name|apache
 operator|.
 name|http
 operator|.
+name|NameValuePair
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|http
+operator|.
 name|client
 operator|.
 name|HttpClient
@@ -1610,6 +1621,68 @@ decl_stmt|;
 comment|// parse out the metadata from the SolrException
 try|try
 block|{
+name|String
+name|encoding
+init|=
+literal|"UTF-8"
+decl_stmt|;
+comment|// default
+if|if
+condition|(
+name|response
+operator|.
+name|getEntity
+argument_list|()
+operator|.
+name|getContentType
+argument_list|()
+operator|.
+name|getElements
+argument_list|()
+operator|.
+name|length
+operator|>
+literal|0
+condition|)
+block|{
+name|NameValuePair
+name|param
+init|=
+name|response
+operator|.
+name|getEntity
+argument_list|()
+operator|.
+name|getContentType
+argument_list|()
+operator|.
+name|getElements
+argument_list|()
+index|[
+literal|0
+index|]
+operator|.
+name|getParameterByName
+argument_list|(
+literal|"charset"
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|param
+operator|!=
+literal|null
+condition|)
+block|{
+name|encoding
+operator|=
+name|param
+operator|.
+name|getValue
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 name|NamedList
 argument_list|<
 name|Object
@@ -1630,16 +1703,7 @@ operator|.
 name|getContent
 argument_list|()
 argument_list|,
-name|response
-operator|.
-name|getEntity
-argument_list|()
-operator|.
-name|getContentType
-argument_list|()
-operator|.
-name|getValue
-argument_list|()
+name|encoding
 argument_list|)
 decl_stmt|;
 name|NamedList
@@ -1667,6 +1731,7 @@ name|error
 operator|!=
 literal|null
 condition|)
+block|{
 name|solrExc
 operator|.
 name|setMetadata
@@ -1685,6 +1750,7 @@ literal|"metadata"
 argument_list|)
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 catch|catch
 parameter_list|(
